--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,6 +15,9 @@
         <li appDirectiveLink class="nav-item">
           <a class="nav-link" routerLink="/curriculum-vitae">Curriculum Vitae</a>
         </li>
+        <li appDirectiveLink class="nav-item">
+          <a class="nav-link" routerLink="/personajes-star-wars">Personajes de Star Wars</a>
+        </li>
       </ul>
     </div>
   </div>
